# src/main/resources/swagger/swagger.yml
@@ -309,7 +309,7 @@ paths:
   # =======================
   # PAYMENT CONTROLLER
   # =======================
-  /api/payments/createPayment:
+  /api/payments/pay:
     post:
       tags: [payment-controller]
       summary: Create Dummy Payment
@@ -323,27 +323,6 @@ paths:
               orderId: 1
               amount: 1500
               method: "CARD"
-      responses:
-        "201":
-          description: Payment created successfully
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PaymentResponse"
-
-  /api/payments/complete/{paymentId}:
-    post:
-      tags: [ payment-controller ]
-      summary: Complete Dummy Payment
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/PaymentRequest"
-            example:
-              paymentId: 1
-              STATUS: "PENDING"
       responses:
         "201":
           description: Payment completed successfully
@@ -379,47 +358,6 @@ paths:
   # =======================
   # WALLET CONTROLLER
   # =======================
-  /api/wallet/{userId}:
-    post:
-      tags: [ wallet-controller ]
-      summary: Get Wallet By UserId
-      parameters:
-        - in: path
-          name: userId
-          required: true
-          schema:
-            type: integer
-      responses:
-        "200":
-          description: Wallet credited
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WalletResponse"
-
-  /api/wallet/{userId}/credit:
-    post:
-      tags: [wallet-controller]
-      summary: Credit Wallet
-      parameters:
-        - in: path
-          name: userId
-          required: true
-          schema:
-            type: integer
-        - in: query
-          name: amount
-          required: true
-          schema:
-            type: number
-      responses:
-        "200":
-          description: Wallet credited
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WalletResponse"
-
   /api/wallet/{userId}/debit:
     post:
       tags: [wallet-controller]
@@ -443,23 +381,23 @@ paths:
               schema:
                 $ref: "#/components/schemas/WalletResponse"
 
-  /api/wallet/{userId}/transactions:
-    get:
-      tags: [ wallet-transactions-controller ]
-      summary: Wallet Transactions
-      parameters:
-        - in: path
-          name: userId
-          required: true
-          schema:
-            type: integer
-      responses:
-        "200":
-          description: Wallet transactions
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WalletTransactionsResponse"
+#  /api/wallet/{userId}/transactions:
+#    get:
+#      tags: [ wallet-transactions-controller ]
+#      summary: Wallet Transactions
+#      parameters:
+#        - in: path
+#          name: userId
+#          required: true
+#          schema:
+#            type: integer
+#      responses:
+#        "200":
+#          description: Wallet transactions
+#          content:
+#            application/json:
+#              schema:
+#                $ref: "#/components/schemas/WalletTransactionsResponse"
 
   # =======================
   # INVOICE CONTROLLER
